--- a/shoes/css/shoes.css
+++ b/shoes/css/shoes.css
@@ -61,3 +61,46 @@
     color: blue;
     
 }
+
+div, input, textarea{
+    box-sizing: border-box;
+}
+
+.from-background{
+    background: black;
+    padding: 30px;
+}
+
+.form-white{
+    background-color: white;
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+    padding: 30px;
+}
+.form-input{
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.w-100{
+    width: 100%;
+    padding: 10px;
+}
+.w-50{
+    width: 50%;
+    padding: 10px;
+    float: left;
+}
+.btn{
+    
+}
+.yellow-button{
+    padding: 10px;
+    display: block;
+    margin-left: auto;
+    background-color: aqua;
+}
