--- a/shoes/css/shoes.css
+++ b/shoes/css/shoes.css
@@ -104,3 +104,14 @@ div, input, textarea{
     margin-left: auto;
     background-color: aqua;
 }
+
+.nav-container{
+    display: flex;
+    height: 50px;
+    padding: 10px;
+    align-items: center;
+
+}
+.nav-item{
+    margin-right: 10px;
+}
