--- a/shoes/css/shoes.css
+++ b/shoes/css/shoes.css
@@ -115,3 +115,46 @@ div, input, textarea{
 .nav-item{
     margin-right: 10px;
 }
+.product-container{
+    width: 80%;
+    max-width: 1000px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.product-container div{
+    float: left;
+    width: 25%;
+    text-align: center;
+}
+
+/* @media screen and (max-width: 1200px) {
+    .product-container div{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .product-container div{
+        width: 75%;
+    }
+} */
+
+@media screen and(max-width: 1200px) {
+
+    .main-title{
+        font-size: 10px;
+    }
+    .product-container div{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .main-title{
+        font-size: 10px;
+    }
+    .product-container div{
+        width: 100%;
+    }
+}
